add the ks test function

--- a/notebooks/figures/supplementary/FigureS9.ipynb
+++ b/notebooks/figures/supplementary/FigureS9.ipynb
@@ -11,7 +11,112 @@
     "import utilssphering\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import os\n",
+    "import scipy.stats\n",
+    "import itertools"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "match_rep_df = pd.read_csv(\"../checkpoints/match_rep_df.csv\")\n",
+    "\n",
+    "match_rep_df = match_rep_df[match_rep_df[\"sphering\"] == True]\n",
+    "\n",
+    "match_rep_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Compare all possible pairs of plates\n",
+    "\n",
+    "profile_path = \"../../jump-scope/profiles/\"\n",
+    "\n",
+    "def combination_compare(match_rep_df: pd.DataFrame, vendor: str, profile_path, no_difference_cols: list = [\"Magnification\", \"Binning\"]):\n",
+    "    \"\"\"\n",
+    "    For a given vendor, find all possible pariwise plate comparisons and perform\n",
+    "    the KSTest between all features.\n",
+    "\n",
+    "    Returns a dataframe with KSTest statistic and pvalues for each feature.\n",
+    "    Returned DataFrame also includes setting information for each plate (column\n",
+    "    appended with plate1 or plate2, accordingly.)\n",
+    "\n",
+    "    no_difference_cols: if the plates to be compared differ in these values,\n",
+    "    they will be skipped. For example, 20x will not be compared with 10x\n",
+    "    \"\"\"\n",
+    "    vendor_subset = match_rep_df[\n",
+    "        match_rep_df[\"Vendor\"].str.contains(vendor, case=False) &\n",
+    "        ~match_rep_df[\"Batch\"].str.contains(\"sitesub\", case=False) # Exclude sitesub\n",
+    "    ]\n",
+    "\n",
+    "    # Find plate combinations \n",
+    "    # Since we use with replacement, make sure to drop identical comparisons later\n",
+    "    plate_combinations = itertools.combinations_with_replacement(vendor_subset[\"Assay_Plate_Barcode\"].to_list(), 2)\n",
+    "\n",
+    "    # df to store results\n",
+    "    collated_df = pd.DataFrame()\n",
+    "\n",
+    "    for i in plate_combinations:\n",
+    "        left_row = vendor_subset[vendor_subset[\"Assay_Plate_Barcode\"] == i[0]].reset_index()\n",
+    "        right_row = vendor_subset[vendor_subset[\"Assay_Plate_Barcode\"] == i[1]].reset_index()\n",
+    "        # Check that profiles posses the same values in the no_difference_cols columns\n",
+    "        if no_difference_cols is not None:\n",
+    "            if not left_row[no_difference_cols].equals(right_row[no_difference_cols]):\n",
+    "                print(f\"\"\"Skipping {left_row[no_difference_cols].values} vs {right_row[no_difference_cols].values} between {i}\"\"\")\n",
+    "                continue\n",
+    "\n",
+    "        # Load profiles\n",
+    "        left_path = os.path.join(profile_path, left_row[\"Batch\"].values[0], left_row[\"Assay_Plate_Barcode\"].values[0], f\"{left_row['Assay_Plate_Barcode'].values[0]}.csv.gz\")\n",
+    "        left_profile = pd.read_csv(left_path)\n",
+    "        right_path = os.path.join(profile_path, right_row[\"Batch\"].values[0], right_row[\"Assay_Plate_Barcode\"].values[0], f\"{right_row['Assay_Plate_Barcode'].values[0]}.csv.gz\")\n",
+    "        right_profile = pd.read_csv(right_path)\n",
+    "\n",
+    "        print(f\"Comparing {left_row['Batch'].values[0]}/{i[0]} with {right_row['Batch'].values[0]}/{i[1]}\")\n",
+    "\n",
+    "        # Drop string columns\n",
+    "        left_profile_cols = left_profile.select_dtypes(include=['object'])\n",
+    "        left_profile = left_profile.drop(columns=left_profile_cols.columns)\n",
+    "        left_profile = left_profile.loc[:, ~left_profile.columns.str.contains(\"metadata\", case=False)]\n",
+    "\n",
+    "        right_profile_cols = right_profile.select_dtypes(include=['object'])\n",
+    "        right_profile = right_profile.drop(columns=right_profile_cols.columns)\n",
+    "        right_profile = right_profile.loc[:, ~right_profile.columns.str.contains(\"metadata\", case=False)]\n",
+    "\n",
+    "        # Gather settings for plate1 and plate2 to add to the same row with the corresponding statistic\n",
+    "        left = vendor_subset[vendor_subset[\"Assay_Plate_Barcode\"] == i[0]]\n",
+    "        left = left.add_suffix(\"_plate1\").reset_index(drop=True)\n",
+    "        right = vendor_subset[vendor_subset[\"Assay_Plate_Barcode\"] == i[1]]\n",
+    "        right = right.add_suffix(\"_plate2\").reset_index(drop=True)\n",
+    "        comparison_df = pd.concat([left, right], axis=1)\n",
+    "\n",
+    "        for feature in left_profile.columns.intersection(right_profile.columns):\n",
+    "            kstest_comparison = scipy.stats.kstest(left_profile[feature].values, right_profile[feature].values)\n",
+    "            new_cols = pd.DataFrame.from_dict({\n",
+    "                f\"{feature}_kstest_statistic\": [kstest_comparison[0]],\n",
+    "                f\"{feature}_kstest_pvalue\": [kstest_comparison[1]]\n",
+    "            })\n",
+    "            # Append plate_comparison statistics as a column\n",
+    "            comparison_df = pd.concat([comparison_df, new_cols], axis=1)\n",
+    "\n",
+    "        # Append two plate comparison as a new row\n",
+    "        collated_df = pd.concat([collated_df, comparison_df], axis=0)\n",
+    "    \n",
+    "    return collated_df\n",
+    "\n",
+    "for vend in match_rep_df[\"Vendor\"].unique():\n",
+    "    print(vend)\n",
+    "    if os.path.isfile(f\"{vend}_all_plate_comparison_exclude_different_mag_binning_comparison.csv\"):\n",
+    "        continue\n",
+    "    comb_df = combination_compare(match_rep_df, vend, profile_path, no_difference_cols=[\"Magnification\", \"Binning\"])\n",
+    "    comb_df.to_csv(f\"{vend}_all_plate_comparison_exclude_different_mag_binning_comparison.csv\", index=False)\n"
    ]
   },
   {
