regen plots and enable saving for S11

--- a/notebooks/misc/data-processing.ipynb
+++ b/notebooks/misc/data-processing.ipynb
@@ -1338,6 +1338,54 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(181, 28)\n",
+      "(182, 28)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Merge the missing profile\n",
+    "\n",
+    "# Merge dropout dataframes\n",
+    "df_rep = pd.read_csv(\"../../checkpoints/moa-replicating_ALT.csv\")\n",
+    "df_match = pd.read_csv(\"../../checkpoints/moa-matching_ALT.csv\")\n",
+    "\n",
+    "# Select only sphering as true\n",
+    "df_rep = df_rep[df_rep[\"sphering\"] == True]\n",
+    "df_match = df_match[df_match[\"sphering\"] == True]\n",
+    "\n",
+    "# Rename columns\n",
+    "df_rep = df_rep.rename(columns={\"Value_95\": \"value_95_replicating\"})\n",
+    "df_match = df_match.rename(columns={\"Value_95\": \"value_95_matching\"})\n",
+    "\n",
+    "# Find the unique columns that are to be included in the merge\n",
+    "set1 = set(df_rep.columns)\n",
+    "set2 = set(df_match.columns)\n",
+    "rep_set = set1 - set2\n",
+    "merge_cols = [\"Vendor\", \"Batch\", \"Assay_Plate_Barcode\", \"sphering\"] + list(rep_set)\n",
+    "\n",
+    "missing_prof = pd.merge(df_rep[merge_cols], df_match, how=\"inner\")\n",
+    "\n",
+    "# Drop distributions to reduce filesize\n",
+    "missing_prof = missing_prof.drop([\"Null_Replicating\", \"Replicating\", \"Matching\", \"Null_Matching\"], axis=1)\n",
+    "missing_prof\n",
+    "\n",
+    "match_rep_df = pd.read_csv(\"../../checkpoints/match_rep_df.csv\")\n",
+    "print(match_rep_df.shape)\n",
+    "match_rep_df = pd.concat([match_rep_df, missing_prof]).reset_index(drop=True)\n",
+    "print(match_rep_df.shape)\n",
+    "match_rep_df.to_csv(\"../../checkpoints/match_rep_df.csv\", index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 42,
    "metadata": {},
    "outputs": [
